update chum meta a bit

--- a/rpm/ncdu.yaml
+++ b/rpm/ncdu.yaml
@@ -16,11 +16,11 @@ Description: |
     and provides a fast way to see what directories are using your disk space.
 
     %if "%{?vendor}" == "chum"
+    PackageName: ncdu
     Type: console-application
     PackagerName: nephros
     Categories:
      - Utility
-     - ConsoleOnly
     Custom:
       Repo: https://g.blicky.net/ncdu.git
       PackagingRepo: https://github.com/sailfishos-chum/ncdu
