--- a/rpm/ncdu.yaml
+++ b/rpm/ncdu.yaml
@@ -15,10 +15,10 @@ Description: |
     ncdu (NCurses Disk Usage) is a curses-based version of the well-known 'du',
     and provides a fast way to see what directories are using your disk space.
 
-    %if "%{?vendor}" == "chum"
-    PackageName: ncdu
+    %if 0%{?_chum}
+    Title: ncdu
     Type: console-application
-    PackagerName: nephros
+    PackagedBy: nephros
     Categories:
      - Utility
     Custom:
